# resume_parsing

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  sorting_resume.py
.github/workflows/: python-app.yml
core/: __init__.py  base_parser.py  http.py  logging_config.py  selenium.py  utils.py
other_tools/: README.md  get_all_html.py
parsers/: __init__.py  robota_ua.py  selectors.py  work_ua.py
robota_ua/: get_resume.py  get_separate_resume.py
sorting_resume/: README.md  __init__.py  config.py  sorting_resume.py
tests/: conftest.py  test_parsers.py  test_scoring.py  test_utils.py
utils/: config.yaml  utils.py
work_ua/: get_resume.py  get_separate_resume.py
